--- a/live-chat-usermsg-center/pom.xml
+++ b/live-chat-usermsg-center/pom.xml
@@ -12,12 +12,43 @@
     <artifactId>live-chat-usermsg-center</artifactId>
 
     <dependencies>
+        <!--项目模块-->
         <dependency>
             <groupId>com.github.mrag</groupId>
             <artifactId>live-chat-usermsg-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.mrag</groupId>
+            <artifactId>live-chat-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
+        <!--zookeeper-->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+        </dependency>
+
+        <!--springboot + dubbo-->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+        </dependency>
+
+        <!--mybatis + mysql-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator-core</artifactId>
