--- a/live-chat-restful-entry/src/main/resources/application.properties
+++ b/live-chat-restful-entry/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=live-chat-restful-entry
+spring.application.name=live-chat-restful-consumer
+
+dubbo.consumer.group=livechat-dev
+dubbo.consumer.version=1.0.0-dev
+
+dubbo.registry.address=zookeeper://localhost:2181
+dubbo.registry.file=${user.home}/dubbo-cache/${spring.application.name}/dubbo.cache
