--- a/live-chat-restful-entry/pom.xml
+++ b/live-chat-restful-entry/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>live-chat-restful-entry</artifactId>
 
     <dependencies>
+        <!--项目模块-->
         <dependency>
             <groupId>com.github.mrag</groupId>
             <artifactId>live-chat-common</artifactId>
@@ -23,14 +24,21 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!--springboot + dubbo-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
+        </dependency>
+
+        <!--zookeeper-->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-dependencies-zookeeper</artifactId>
+            <type>pom</type>
         </dependency>
     </dependencies>
 </project>
