--- a/live-chat-usermsg-center/src/main/resources/application.properties
+++ b/live-chat-usermsg-center/src/main/resources/application.properties
@@ -3,8 +3,13 @@ spring.application.name=live-chat-usermsg-center
 # 配置 dubbo 服务的扫描路径
 dubbo.scan.base-packages=com.github.mrag.livechat.usermsg.service
 dubbo.protocol.name=dubbo
+# 该值如果设置为 -1 则表示为随机端口
 dubbo.protocol.port=20880
-dubbo.registry.address=N/A
+dubbo.registry.address=zookeeper://localhost:2181
+dubbo.registry.file=${user.home}/dubbo-cache/${spring.application.name}/dubbo.cache
+# 服务提供者的「组别」与「版本号」
+dubbo.provider.group=livechat-dev
+dubbo.provider.version=1.0.0-dev
 # 数据库配置
 spring.datasource.url=jdbc:mysql://120.79.155.125:4001/live_chat?serverTimezone=Asia/Shanghai
 spring.datasource.username=root
