解决了vue部署在springboot下刷新页面404的问题

--- a/live-chat-client-server/src/main/resources/application.properties
+++ b/live-chat-client-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=3000
-server.servlet.context-path=/cli
+server.servlet.context-path=
 # 配置 h2 数据库连接
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
