--- a/live-chat-client-server/pom.xml
+++ b/live-chat-client-server/pom.xml
@@ -9,9 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>live-chat-client-server</artifactId>
-    <description>为了更好的提供服务，客户端采用springboot本地后台+web界面的方式来实现</description>
+    <description>Client采用springboot本地后台+web界面的方式来实现</description>
 
     <dependencies>
+        <!--项目模块依赖-->
+        <dependency>
+            <groupId>com.github.mrag</groupId>
+            <artifactId>live-chat-usermsg-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!--spring-mvc 依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
