done: 添加restTemplate，todo: 后台全局异常处理、参数校验

--- a/live-chat-client-server/pom.xml
+++ b/live-chat-client-server/pom.xml
@@ -15,6 +15,11 @@
         <!--项目模块依赖-->
         <dependency>
             <groupId>com.github.mrag</groupId>
+            <artifactId>live-chat-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.mrag</groupId>
             <artifactId>live-chat-usermsg-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
