--- a/live-chat-client-server/src/main/resources/application.properties
+++ b/live-chat-client-server/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=
 # 配置 jpa
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# 自定义属性
+myproperties.server-address-prefix=http://localhost:4200/api/v1
