--- a/live-chat-client-server/pom.xml
+++ b/live-chat-client-server/pom.xml
@@ -24,6 +24,13 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!--自定义属性依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!--spring-mvc 依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
