--- a/live-chat-usermsg-api/pom.xml
+++ b/live-chat-usermsg-api/pom.xml
@@ -11,4 +11,10 @@
 
     <artifactId>live-chat-usermsg-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+    </dependencies>
 </project>
