--- a/live-chat-usermsg-center/src/main/resources/application.properties
+++ b/live-chat-usermsg-center/src/main/resources/application.properties
@@ -16,4 +16,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-
+# mybatis配置
+mybatis.mapper-locations=classpath:com/**/dao/*.xml
