--- a/live-chat-restful-entry/pom.xml
+++ b/live-chat-restful-entry/pom.xml
@@ -24,6 +24,16 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!--工具包-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+
         <!--springboot + dubbo-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
