todo 完善哈希加密

--- a/live-chat-restful-entry/src/main/resources/application.properties
+++ b/live-chat-restful-entry/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.application.name=live-chat-restful-consumer
 dubbo.consumer.group=livechat-dev
 dubbo.consumer.version=1.0.0-dev
 
-dubbo.registry.address=zookeeper://localhost:2181
+dubbo.registry.address=zookeeper://120.79.155.125:4181
+dubbo.config-center.timeout=10000
 dubbo.registry.file=${user.home}/dubbo-cache/${spring.application.name}/dubbo.cache
