--- a/live-chat-usermsg-center/pom.xml
+++ b/live-chat-usermsg-center/pom.xml
@@ -39,6 +39,10 @@
     
     <!--mybatis + mysql-->
     <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper-spring-boot-starter</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>druid-spring-boot-starter</artifactId>
     </dependency>
