--- a/live-chat-usermsg-center/src/main/resources/application.properties
+++ b/live-chat-usermsg-center/src/main/resources/application.properties
@@ -5,7 +5,9 @@ dubbo.scan.base-packages=com.github.mrag.livechat.usermsg.service
 dubbo.protocol.name=dubbo
 # 该值如果设置为 -1 则表示为随机端口
 dubbo.protocol.port=20880
-dubbo.registry.address=zookeeper://localhost:2181
+dubbo.registry.address=zookeeper://120.79.155.125:4181
+# 连接阿里云的zk时需要将timeout设置大一些，这里设定10秒
+dubbo.config-center.timeout=10000
 dubbo.registry.file=${user.home}/dubbo-cache/${spring.application.name}/dubbo.cache
 # 服务提供者的「组别」与「版本号」
 dubbo.provider.group=livechat-dev
