--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
           </exclusion>
         </exclusions>
       </dependency>
+      
+      <!--jwt依赖-->
+      <dependency>
+        <groupId>com.nimbusds</groupId>
+        <artifactId>nimbus-jose-jwt</artifactId>
+        <version>8.2.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   
