解决了连不上zk的问题

--- a/live-chat-usermsg-center/src/main/resources/application.properties
+++ b/live-chat-usermsg-center/src/main/resources/application.properties
@@ -6,8 +6,13 @@ dubbo.protocol.name=dubbo
 # 该值如果设置为 -1 则表示为随机端口
 dubbo.protocol.port=20880
 dubbo.registry.address=zookeeper://120.79.155.125:4181
-# 连接阿里云的zk时需要将timeout设置大一些，这里设定10秒
-dubbo.config-center.timeout=10000
+# 连接阿里云的zk时需要将timeout设置大一些，这里设定20秒
+# 网络条件不好，能设置的所有超时选项全部设大，不然会有可能报zookeeper not connected
+dubbo.provider.timeout=20000
+dubbo.registry.timeout=20000
+dubbo.consumer.timeout=20000
+dubbo.config-center.timeout=20000
+dubbo.metadata-report.timeout=20000
 dubbo.registry.file=${user.home}/dubbo-cache/${spring.application.name}/dubbo.cache
 # 服务提供者的「组别」与「版本号」
 dubbo.provider.group=livechat-dev
