完成cache初始化enum到dict

--- a/live-chat-common/pom.xml
+++ b/live-chat-common/pom.xml
@@ -18,6 +18,12 @@
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
   
+    <!--mybatis typehandler use-->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+    </dependency>
+  
     <!--JSON 解析-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
