--- a/live-chat-cache-center/pom.xml
+++ b/live-chat-cache-center/pom.xml
@@ -21,8 +21,8 @@
     
     <!--redis-->
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-redis</artifactId>
+      <groupId>org.redisson</groupId>
+      <artifactId>redisson</artifactId>
     </dependency>
     
     <!--zookeeper-->
