--- a/live-chat-usermsg-center/src/main/resources/application.properties
+++ b/live-chat-usermsg-center/src/main/resources/application.properties
@@ -25,3 +25,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 # mybatis配置
 mybatis.mapper-locations=classpath:com/**/dao/*.xml
+mybatis.type-handlers-package=com.github.mrag.livechat.common.constant.typehandler
