--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,16 @@
     <spring.boot.version>2.3.1.RELEASE</spring.boot.version>
     <dubbo.version>2.7.7</dubbo.version>
     <mybatis.generator.core.version>1.4.0</mybatis.generator.core.version>
+    <mybatis.version>3.5.4</mybatis.version>
     <mybatis.boot.version>2.1.2</mybatis.boot.version>
     <mybatis.dynamic.version>1.1.4</mybatis.dynamic.version>
     <pagehelper.version>1.2.13</pagehelper.version>
     <!--druid版本1.1.23有问题，使用1.1.22-->
     <druid.version>1.1.22</druid.version>
+    <swagger2.version>2.7.0</swagger2.version>
+    <swagger.codegen.version>2.4.15</swagger.codegen.version>
+    <jose.jwt.version>8.2.1</jose.jwt.version>
+    <redisson.version>3.13.3</redisson.version>
   </properties>
   
   <dependencyManagement>
@@ -50,11 +55,30 @@
         <version>${druid.version}</version>
       </dependency>
       
+      <!--Swagger-UI API文档生产工具-->
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger2</artifactId>
+        <version>${swagger2.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger-ui</artifactId>
+        <version>${swagger2.version}</version>
+      </dependency>
+      
+      <!--Swagger Codegen依赖-->
+      <dependency>
+        <groupId>io.swagger</groupId>
+        <artifactId>swagger-codegen-maven-plugin</artifactId>
+        <version>${swagger.codegen.version}</version>
+      </dependency>
+      
       <!--mybatis相关依赖，版本号源于 mybatis-spring-boot-2.1.2.pom-->
       <dependency>
         <groupId>org.mybatis</groupId>
         <artifactId>mybatis</artifactId>
-        <version>3.5.4</version>
+        <version>${mybatis.version}</version>
       </dependency>
       <dependency>
         <groupId>com.github.pagehelper</groupId>
@@ -110,14 +134,14 @@
       <dependency>
         <groupId>org.redisson</groupId>
         <artifactId>redisson</artifactId>
-        <version>3.13.3</version>
+        <version>${redisson.version}</version>
       </dependency>
       
       <!--jwt依赖-->
       <dependency>
         <groupId>com.nimbusds</groupId>
         <artifactId>nimbus-jose-jwt</artifactId>
-        <version>8.2.1</version>
+        <version>${jose.jwt.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
