jackson处理枚举测试

--- a/live-chat-cache-center/src/main/resources/application.properties
+++ b/live-chat-cache-center/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 mybatis.mapper-locations=classpath:com/**/dao/*.xml
+# 日志
+logging.level.com.github.mrag.livechat.cache.dao=DEBUG
+logging.level.com.github.mrag.livechat.cache.service=DEBUG
