--- a/live-chat-usermsg-center/src/main/resources/application.properties
+++ b/live-chat-usermsg-center/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 # mybatis配置
 mybatis.mapper-locations=classpath:com/**/dao/*.xml
 mybatis.type-handlers-package=com.github.mrag.livechat.common.constant.typehandler
+# 日志
+logging.level.com.github.mrag.livechat.usermsg.dao=DEBUG
+logging.level.com.github.mrag.livechat.usermsg.service=DEBUG
