--- a/live-chat-cache-center/src/main/resources/application.properties
+++ b/live-chat-cache-center/src/main/resources/application.properties
@@ -23,5 +23,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 mybatis.mapper-locations=classpath:com/**/dao/*.xml
 # 日志
-logging.level.com.github.mrag.livechat.cache.dao=DEBUG
-logging.level.com.github.mrag.livechat.cache.service=DEBUG
+logging.level.com.github.mrag.livechat=DEBUG
+logging.level.com.github.mrag.livechat=DEBUG
