--- a/live-chat-restful-entry/src/main/resources/application.properties
+++ b/live-chat-restful-entry/src/main/resources/application.properties
@@ -10,3 +10,5 @@ dubbo.consumer.timeout=20000
 dubbo.config-center.timeout=20000
 dubbo.metadata-report.timeout=20000
 dubbo.registry.file=${user.home}/dubbo-cache/${spring.application.name}/dubbo.cache
+
+logging.level.com.github.mrag.livechat=DEBUG
