--- a/live-chat-usermsg-center/src/main/resources/application.properties
+++ b/live-chat-usermsg-center/src/main/resources/application.properties
@@ -17,6 +17,9 @@ dubbo.registry.file=${user.home}/dubbo-cache/${spring.application.name}/dubbo.ca
 # 服务提供者的「组别」与「版本号」
 dubbo.provider.group=livechat-dev
 dubbo.provider.version=1.0.0-dev
+# 自定义扩展异常filter
+dubbo.provider.filter=-exception,dubboExceptionFilter
+dubbo.application.logger=slf4j
 # 数据库配置
 spring.datasource.url=jdbc:mysql://120.79.155.125:4001/live_chat?serverTimezone=Asia/Shanghai
 spring.datasource.username=root
@@ -27,5 +30,4 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 mybatis.mapper-locations=classpath:com/**/dao/*.xml
 mybatis.type-handlers-package=com.github.mrag.livechat.common.constant.typehandler
 # 日志
-logging.level.com.github.mrag.livechat.usermsg.dao=DEBUG
-logging.level.com.github.mrag.livechat.usermsg.service=DEBUG
+logging.level.com.github.mrag.livechat=DEBUG
