--- a/live-chat-client-quasar/package.json
+++ b/live-chat-client-quasar/package.json
@@ -6,6 +6,9 @@
   "author": "Mrag <909498022@qq.com>",
   "private": true,
   "scripts": {
+    "dev": "quasar dev",
+    "build": "quasar build",
+    "build:pwa": "quasar build -m pwa",
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0"
   },
