--- a/live-chat-client-quasar/package.json
+++ b/live-chat-client-quasar/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "scripts": {
     "dev": "quasar dev",
+    "dev:electron": "quasar dev -m electron",
     "build": "quasar build",
     "build:pwa": "quasar build -m pwa",
     "build:electron": "quasar build -m electron",
@@ -22,6 +23,10 @@
   "devDependencies": {
     "@quasar/app": "^2.0.0",
     "babel-eslint": "^10.0.1",
+    "devtron": "^1.4.0",
+    "electron": "^9.3.0",
+    "electron-debug": "^3.1.0",
+    "electron-devtools-installer": "^3.1.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-loader": "^3.0.3",
