--- a/live-chat-api-gateway/pom.xml
+++ b/live-chat-api-gateway/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   
-  <artifactId>live-chat-restful-entry</artifactId>
+  <artifactId>live-chat-api-gateway</artifactId>
   
   <dependencies>
     <!--项目模块-->
