--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
     <pagehelper.version>1.2.13</pagehelper.version>
     <!--druid版本1.1.23有问题，使用1.1.22-->
     <druid.version>1.1.22</druid.version>
-    <swagger2.version>2.7.0</swagger2.version>
-    <swagger.codegen.version>2.4.15</swagger.codegen.version>
+    <swagger2.version>2.9.2</swagger2.version>
+    <!--<swagger.codegen.version>2.4.15</swagger.codegen.version>-->
     <jose.jwt.version>8.2.1</jose.jwt.version>
     <redisson.version>3.13.3</redisson.version>
   </properties>
@@ -68,11 +68,11 @@
       </dependency>
       
       <!--Swagger Codegen依赖-->
-      <dependency>
-        <groupId>io.swagger</groupId>
-        <artifactId>swagger-codegen-maven-plugin</artifactId>
-        <version>${swagger.codegen.version}</version>
-      </dependency>
+      <!--<dependency>-->
+      <!--  <groupId>io.swagger</groupId>-->
+      <!--  <artifactId>swagger-codegen-maven-plugin</artifactId>-->
+      <!--  <version>${swagger.codegen.version}</version>-->
+      <!--</dependency>-->
       
       <!--mybatis相关依赖，版本号源于 mybatis-spring-boot-2.1.2.pom-->
       <dependency>
