--- a/live-chat-api-gateway/src/main/resources/application.properties
+++ b/live-chat-api-gateway/src/main/resources/application.properties
@@ -1,14 +1,1 @@
-server.port=4200
-server.servlet.context-path=/api/v1
-spring.application.name=live-chat-restful-consumer
-dubbo.consumer.group=livechat-dev
-dubbo.consumer.version=1.0.0-dev
-dubbo.registry.address=zookeeper://120.79.155.125:4181
-dubbo.provider.timeout=20000
-dubbo.registry.timeout=20000
-dubbo.consumer.timeout=20000
-dubbo.config-center.timeout=20000
-dubbo.metadata-report.timeout=20000
-dubbo.registry.file=${user.home}/dubbo-cache/${spring.application.name}/dubbo.cache
-
-logging.level.com.github.mrag.livechat=DEBUG
+spring.profiles.active=dev
