--- a/live-chat-common/pom.xml
+++ b/live-chat-common/pom.xml
@@ -43,17 +43,17 @@
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
     </dependency>
-  
-    <!-- 全局引用swagger2 -->
+    
+    <!--springfox swagger-->
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
-      <version>2.9.2</version>
+      <version>2.7.0</version>
     </dependency>
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger-ui</artifactId>
-      <version>2.9.2</version>
+      <version>2.7.0</version>
     </dependency>
   
     <!--jwt-->
