--- a/live-chat-api-gateway/pom.xml
+++ b/live-chat-api-gateway/pom.xml
@@ -41,4 +41,13 @@
       <type>pom</type>
     </dependency>
   </dependencies>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
