--- a/live-chat-common/pom.xml
+++ b/live-chat-common/pom.xml
@@ -18,10 +18,14 @@
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
   
-    <!--mybatis typehandler use-->
+    <!--mybatis-->
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis.generator</groupId>
+      <artifactId>mybatis-generator-core</artifactId>
     </dependency>
   
     <!--JSON 解析-->
@@ -48,14 +52,14 @@
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
-      <version>2.7.0</version>
+      <version>2.9.2</version>
     </dependency>
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger-ui</artifactId>
-      <version>2.7.0</version>
+      <version>2.9.2</version>
     </dependency>
-  
+    
     <!--jwt-->
     <dependency>
       <groupId>com.nimbusds</groupId>
