--- a/live-chat-stand-alone/pom.xml
+++ b/live-chat-stand-alone/pom.xml
@@ -7,13 +7,12 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>live-chat-stand-alone</name>
   <description>Live</description>
-  
+
   <properties>
     <java.version>11</java.version>
     <spring.boot.version>2.3.4.RELEASE</spring.boot.version>
     <redisson.version>3.13.3</redisson.version>
     <druid.version>1.1.22</druid.version>
-    <jose.jwt.version>8.2.1</jose.jwt.version>
     <mybatis.generator.core.version>1.4.0</mybatis.generator.core.version>
     <druid.version>1.1.22</druid.version>
     <pagehelper.version>1.2.13</pagehelper.version>
@@ -21,7 +20,7 @@
     <jose.jwt.version>8.2.1</jose.jwt.version>
     <commons.io.version>2.6</commons.io.version>
   </properties>
-  
+
   <dependencyManagement>
     <dependencies>
       <!-- springboot core dependencies -->
@@ -34,7 +33,7 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-  
+
   <dependencies>
     <!-- redis cache -->
     <dependency>
@@ -42,11 +41,15 @@
       <artifactId>redisson</artifactId>
       <version>${redisson.version}</version>
     </dependency>
-    
+
     <!-- web -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
@@ -58,7 +61,7 @@
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
     </dependency>
-    
+
     <!-- data access -->
     <dependency>
       <groupId>org.mybatis.generator</groupId>
@@ -85,7 +88,7 @@
       <artifactId>mysql-connector-java</artifactId>
       <scope>runtime</scope>
     </dependency>
-    
+
     <!-- api-doc -->
     <dependency>
       <groupId>io.springfox</groupId>
@@ -97,7 +100,7 @@
       <artifactId>springfox-swagger-ui</artifactId>
       <version>2.9.2</version>
     </dependency>
-    
+
     <!-- tools -->
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -112,7 +115,7 @@
       <artifactId>commons-io</artifactId>
       <version>${commons.io.version}</version>
     </dependency>
-    
+
     <!-- testing -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -126,7 +129,7 @@
       </exclusions>
     </dependency>
   </dependencies>
-  
+
   <build>
     <plugins>
       <plugin>
