--- a/live-chat-stand-alone/src/main/resources/application.yml
+++ b/live-chat-stand-alone/src/main/resources/application.yml
@@ -13,3 +13,7 @@ spring:
     username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
+
+logging:
+  level:
+    com.github.mrag.livechat: debug
