--- a/live-chat-stand-alone/src/main/resources/application.yml
+++ b/live-chat-stand-alone/src/main/resources/application.yml
@@ -9,10 +9,16 @@ mybatis:
 
 spring:
   datasource:
-    url: jdbc:mysql://120.79.155.125:4001/live_chat?useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://120.79.155.125:4001/live_chat?useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
     password: root
-    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      connection-test-query: select 1
+      max-lifetime: 30000
+      minimum-idle: 3
+      maximum-pool-size: 100
 
 logging:
   level:
