--- a/live-chat-stand-alone/src/main/resources/application.yml
+++ b/live-chat-stand-alone/src/main/resources/application.yml
@@ -9,7 +9,7 @@ mybatis:
 
 spring:
   profiles:
-    active: dev
+    active: local
   datasource:
     url: jdbc:mysql://120.79.155.125:4001/live_chat?useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
