--- a/live-chat-stand-alone/pom.xml
+++ b/live-chat-stand-alone/pom.xml
@@ -100,6 +100,11 @@
 
     <!-- tools -->
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>30.0-jre</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
