--- a/spring-boot-source-analysis-code-master/pom.xml
+++ b/spring-boot-source-analysis-code-master/pom.xml
@@ -28,6 +28,13 @@
       <artifactId>spring-boot-starter-aop</artifactId>
     </dependency>
 
+    <!--mybatis测试-->
+    <dependency>
+      <groupId>org.mybatis.spring.boot</groupId>
+      <artifactId>mybatis-spring-boot-starter</artifactId>
+      <version>2.1.3</version>
+    </dependency>
+
     <!-- 测试声明式事务时加入此依赖 -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
