--- a/live-chat-stand-alone/pom.xml
+++ b/live-chat-stand-alone/pom.xml
@@ -32,6 +32,12 @@
   </dependencyManagement>
 
   <dependencies>
+    <!-- tcp -->
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+    </dependency>
+
     <!-- redis cache -->
     <dependency>
       <groupId>org.redisson</groupId>
