--- a/live-chat-stand-alone/src/main/resources/application-local.yml
+++ b/live-chat-stand-alone/src/main/resources/application-local.yml
@@ -1,5 +1,25 @@
+server:
+  port: 4200
+  servlet:
+    context-path: /livechat-api
+
+mybatis:
+  mapper-locations: classpath:com/github/mrag/livechat/modules/**/*.xml
+  type-handlers-package: com.github.mrag.livechat.enums.typehandler
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/live_chat?useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
     password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      connection-test-query: select 1
+      max-lifetime: 30000
+      minimum-idle: 3
+      maximum-pool-size: 100
+
+logging:
+  level:
+    com.github.mrag.livechat: debug
