--- a/hello-springboot/pom.xml
+++ b/hello-springboot/pom.xml
@@ -8,24 +8,35 @@
     <version>2.1.9.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
-
+  
   <groupId>com.github.mrag</groupId>
   <artifactId>hello-springboot</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>hello-springboot</name>
   <description>Demo project for Spring Boot</description>
-
+  
   <properties>
     <java.version>11</java.version>
   </properties>
-
+  
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+  
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.junit.vintage</groupId>
+          <artifactId>junit-vintage-engine</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
-
+  
   <build>
     <plugins>
       <plugin>
